# vamos

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
docs/: vamos-phase1-foundation.md  vamos-phase2-sound-sources.md  vamos-phase3-filter.md  vamos-phase3-noise-mixer.md  vamos-phase5-modulation.md  vamos-phase5-modulators.md  vamos-phase7-voice-architecture.md  vamos-phase8-parameters-gui.md
scripts/: dev.sh  install-au-plugin.sh
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: CyclingEnvelope.cpp  CyclingEnvelope.h  Drift.h  Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  LFO.cpp  LFO.h  Mixer.cpp  Mixer.h  ModContext.h  Modulation.h  Noise.cpp  Noise.h  Oscillator.cpp  Oscillator.h  Synth.cpp  Synth.h  Voice.cpp  Voice.h
tests/: CMakeLists.txt
tests/dsp/: EnvelopeTests.cpp  FilterTests.cpp  OscillatorTests.cpp  SynthTests.cpp  VoiceTests.cpp
tests/plugin/: PluginTests.cpp
video/: .gitignore  README.md  WORKFLOW.md  generate-voiceover.ts  package-lock.json  package.json  prepare-youtube-video.ts  tailwind.config.ts
video/src/: Root.tsx  Video.tsx  types.ts
video/src/components/: ADSRVisualizer.tsx  Badge.tsx  CodeBlock.tsx  CyclingEnvelopeVisualizer.tsx  FileTree.tsx  FilterResponseCurve.tsx  KeyPoint.tsx  ModRoutingDiagram.tsx  NeonBox.tsx  SceneContainer.tsx  SceneNarration.tsx  SectionTitle.tsx  SignalFlowDiagram.tsx  SpectrumVisualizer.tsx  VoiceGrid.tsx  WaveformVisualizer.tsx  WaveshapingVisualizer.tsx
video/src/ep01/: Thumbnail.tsx  Video.tsx  code-snippets.ts  narration.ts  timing.ts
video/src/ep01/scenes/: 01-Intro.tsx  02-ProjectSetup.tsx  03-Phasor.tsx  04-Oscillator.tsx  05-Envelope.tsx  06-Voice.tsx  07-Synth.tsx  08-PluginIntegration.tsx  09-Outro.tsx
video/src/ep02/: Video.tsx  code-snippets.ts  narration.ts  timing.ts
video/src/ep02/scenes/: 01-Intro.tsx  02-Gallery.tsx  03-Rectangle.tsx  04-Triangle.tsx  05-Saturated.tsx  06-Shape.tsx  07-Outro.tsx
video/src/ep03/: Video.tsx  code-snippets.ts  narration.ts  timing.ts
video/src/ep03/scenes/: 01-Intro.tsx  02-Osc2.tsx  03-Noise.tsx  04-Mixer.tsx  05-Outro.tsx
video/src/ep04/: Video.tsx  code-snippets.ts  narration.ts  timing.ts
video/src/ep04/scenes/: 01-Intro.tsx  02-SallenKey.tsx  03-Gallery.tsx  04-Routing.tsx  05-Outro.tsx
video/src/ep05/: Video.tsx  code-snippets.ts  narration.ts  timing.ts
video/src/ep05/scenes/: 01-Intro.tsx  02-LFO.tsx  03-CyclingEnv.tsx  04-ModMatrix.tsx  05-Outro.tsx
video/src/lib/: code-snippets.ts  colors.ts  fft.ts  fonts.ts  narration.ts  syntax.ts  timing.ts
video/src/scenes/: 01-Intro.tsx  02-ProjectSetup.tsx  03-Phasor.tsx  04-Oscillator.tsx  05-Envelope.tsx  06-Voice.tsx  07-Synth.tsx  08-PluginIntegration.tsx  09-Outro.tsx
